--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.3.2",
+    "primeflex": "^3.3.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.16",
     "tslib": "^2.3.0",
